[package]
name = "nfq2"
version = "0.1.0"
authors = ["user <biyandonk@yahoo.co.id>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nfq = "0.2.4"
etherparse = "0.9.0"
tls-parser = "0.10.0"
rand = "0.8.3"
rawsock = "0.3.0"
pretty_assertions = "0.6.1"
smoltcp = "0.7.0"
pnet = "0.27.2"
http = "0.2.3"